Extend thraft battle screen
